--- a/mozilla-release/browser/themes/shared/tabs.inc.css
+++ b/mozilla-release/browser/themes/shared/tabs.inc.css
@@ -7,7 +7,7 @@
 %define horizontalTabPadding 9px
 
 :root {
-  --tab-min-height: 33px;
+  --tab-min-height: 30px;
 }
 
 :root[uidensity=compact] {
@@ -603,7 +603,12 @@
 
 /* Drag space */
 
+.titlebar-spacer[type="pre-tabs"] {
+  width: 48px;
+}
+%if 0
 .titlebar-spacer[type="pre-tabs"],
+%endif
 .titlebar-spacer[type="post-tabs"] {
   width: 40px;
 }
